# IA_embarquee

./: .gitignore  Rapport_IA_Embarquee_Adrien_CLAIN_Clement_SAVARY.pdfZone.Identifier
Projet/codeC/Inference/: Bmp2Matrix.c  CMakeLists.txt  Makefile  README.txt  all  main.c  neurone.c
Projet/codeC/Inference/files/: biais_1.txt  biais_2.txt  poids_1.txt  poids_2 .txt  poids_2.txt
Projet/codeC/Inference/include/: neurone.h
Projet/codeC/Inference/src/: main.c  neurone.c
Projet/codeC/Lecture/: all
Projet/codeC/Traitement/: Makefile  main.c
Projet/codePython/: classification.py  classification.pyZone.Identifier
Projet/codePython/Exemple/: classification.py
